    applications providing configuration files for Apache.
  * Write apache2-maintscript-helper which packagers can use to interface in a
    reliable way with the Apache 2 web server in maintainer scripts
  * Document programming hints how to interface with the Apache 2 web server for
  * packagers of web applications and module maintainer in
    /usr/share/doc/apache2/PROGRAMMING

  [ Stefan Fritsch ]

  * Use "dh --with autotools_dev" instead of patching config.sub/config.guess.
  * Only include conf.d/*.conf, not conf.d/*.
  * Don't create httpd.conf anymore. Also, do a proper transition of existing
    httpd.conf files to /etc/apache2/conf-available (Closes: #639383)
  * Add "AddCharset" for .brf files in default mod_mime config.
    (Closes: #402567)
  * Update the README.Debian file

  [ Jean-Michel Vourgère ]

  * Update bash completion functions to reflect the new site setup. (Closes:
    #657492)
  * Migrate patches to DEP-3 format. For particular changes see the summary
    above.

 -- Arno Töll <debian@toell.net>  Fri, 09 Mar 2012 00:24:02 +0100

apache2 (2.2.22-1) unstable; urgency=low

   [ Stefan Fritsch ]
   * New upstream release, urgency medium due to security fixes:
     - Fix CVE-2012-0021: mod_log_config: DoS with '%{cookiename}C' log format
     - Fix CVE-2012-0031: Unprivileged child process could cause the parent to
       crash at shutdown
     - Fix CVE-2012-0053: Exposure of "httpOnly" cookies in code 400 error
       message.
   * Move httxt2dbm to apache2-utils
   * Adjust debian/control to point to new git repository.
 
   [ Arno Töll ]
   * Fix "typo in /etc/apache2/apache2.conf" (Closes: #653801)

 -- Stefan Fritsch <sf@debian.org>  Wed, 01 Feb 2012 21:49:04 +0100 

apache2 (2.2.21-5) unstable; urgency=low

  [ Arno Töll ]
  * Fix build failures introduced as regregression by the previous build. Debian
    buildds aren't rebuilding arch:all packages which caused problems for our