@@ -1,2 +1,2 @@
 version=3
-http://www.apache.org/dist/httpd/httpd-(2\.2.*)\.tar\.gz
+http://www.apache.org/dist/httpd/httpd-(\d\.[02468].*)\.tar\.gz
